--- a/myserver/public/index.html
+++ b/myserver/public/index.html
@@ -18,7 +18,7 @@
                         <td><input type="password" name = password placeholder="P W"></td>
                     </tr>
                     <tr>
-                        <td><input type="submit"" value="Login"></td>
+                        <td><input type="submit" value="Login"></td>
                     </tr>
                 </table>
             </form></td>
